[tool.poetry]
name = "pairlist"
version = "0.6"
description = "Generate neighbor list for the particles in a periodic boundary cell."
authors = ["vitroid <vitroid@gmail.com>"]
license = "MIT"
readme = "README.md"
include = [{path = "csource/"}]

[tool.poetry.build]
script = "setup_build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2.0"


[tool.poetry.group.dev.dependencies]
setuptools = "^69.0.2"
networkx = "^3.2.1"
genice2 = "^2.2"
jinja2 = "^3.1.2"
toml = "^0.10.2"
pdoc = "^14.1.0"
ipykernel = "^6.29.4"
matplotlib = "^3.8.3"

[build-system]
requires = ["poetry-core", "setuptools", "numpy"]
build-backend = "poetry.core.masonry.api"

[tool.cibuildwheel]
# サポートするPythonバージョン
test-command = "python -c 'import pairlist; from cpairlist import pairs, pairs2'"
test-requires = ["numpy"]
# Windows、macOS、Linux用のwheelをビルド
build-verbosity = 1